--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <input type="text" class="form-control" v-model="data.nama">
             </div>
             <div class="form-group">
+                <label>Kelas</label>
+                <input type="text" class="form-control" v-model="data.kelas">
+            </div>
+            <div class="form-group">
                 <label>Email</label>
                 <input type="email" class="form-control" v-model="data.email">
             </div>
@@ -46,6 +50,7 @@
                 <tr>
                     <td>Nama Lengkap</td>
                     <td v-if="data.nama == null">-</td>
+                    <td v-else-if>{{data.kelas}}</td>
                     <td v-else>{{data.email}}</td>
                 </tr>
             </thead>
